# mini-llm

llm-python/: .gitignore  pyproject.toml
llm-python/llm/: gpt_dataset.py  main.py  tokenizer.py
llm-rust/: Cargo.toml
llm-rust/data/: test.txt
llm-rust/src/: main.rs  tokenizer.rs
